<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/journal_label"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1_program"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/program_selected_button"
                android:layout_width="65dp"
                android:layout_height="22dp"
                android:layout_marginStart="5dp"
                android:background="@color/black"
                android:text="@string/select_button"
                android:gravity="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/question2"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <SeekBar
                android:id="@+id/painSeekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:indeterminate="false"
                android:max="20"
                android:progress="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/painPercentsBar"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@color/black"
                android:gravity="center_vertical|center_horizontal"
                android:text="0%"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/painSeekBar"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>




    </LinearLayout>
</ScrollView>